--- a/src/Soenneker.Managers.Entities.csproj
+++ b/src/Soenneker.Managers.Entities.csproj
@@ -3,7 +3,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net9.0</TargetFrameworks>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <Platforms>AnyCPU</Platforms>
         <NoWarn>$(NoWarn);1591</NoWarn>
@@ -13,7 +13,7 @@
 
     <PropertyGroup>
         <Description>An abstract generic manager class provides CRUD operations for entities mapped to Cosmos DB documents</Description>
-        <Version Condition="'$(BUILD_VERSION)' == ''">3.0.0</Version>
+        <Version Condition="'$(BUILD_VERSION)' == ''">4.0.0</Version>
         <Version Condition="'$(BUILD_VERSION)' != ''">$(BUILD_VERSION)</Version>
         <AssemblyName>Soenneker.Managers.Entities</AssemblyName>
         <PackageId>Soenneker.Managers.Entities</PackageId>
